--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 
 ## can exclude some sttings files
 
+*/addons/*
+
 ## macOS files
 config.make
 Makefile
@@ -13,8 +15,8 @@ openFrameworks-Info.plist
 Project.xcconfig
 icon.rc
 
-#*.ps1
-#*.bat
+*.ps1
+*.bat
 *.ini
 *.XML
 *.xml
