--- a/.gitignore
+++ b/.gitignore
@@ -562,3 +562,4 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+Examples/example_Osc_Master/enc_temp_folder/308f7844c05fdcde28b5f31334ed236/ofxSurfingOsc.cpp
